data cleaning function added

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,6 +106,101 @@
    "source": [
     "load_csv_to_bigquery(\"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\Dastaset\\\\referral.csv\", \"snappy-nomad-382716\", \"referal\")\n",
     "load_csv_to_bigquery(\"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\Dastaset\\\\transactions.csv\", \"snappy-nomad-382716\", \"transactions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def clean_bigquery_table(project_id, table_id,remove_nulls=False,remove_duplicates=False,columns_to_check=None):\n",
+    "    \"\"\"\n",
+    "    Clean a BigQuery table by removing null values and/or duplicates.\n",
+    "\n",
+    "    Args:\n",
+    "        project_id (str): The Google Cloud Project ID.\n",
+    "        table_id (str): The BigQuery table ID.\n",
+    "        remove_nulls (bool, optional): Whether to remove rows with null values. Defaults to False.\n",
+    "        columns_to_check (list, optional): List of columns to check for null values or duplicates. Defaults to None (all columns).\n",
+    "        remove_duplicates (bool, optional): Whether to remove duplicate rows. Defaults to False.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    client = bigquery.Client()\n",
+    "    table_ref = client.get_table(table_id)\n",
+    "    table = client.get_table(table_ref)\n",
+    "\n",
+    "    if columns_to_check is None:\n",
+    "        columns_to_check = [field.name for field in table.schema]\n",
+    "\n",
+    "    sql_base = f\"SELECT * FROM `{table_id}`\"\n",
+    "    sql_conditions = []\n",
+    "\n",
+    "    if remove_nulls:\n",
+    "        not_null_conditions = [f\"{column} IS NOT NULL\" for column in columns_to_check]\n",
+    "        sql_conditions.append(\" AND \".join(not_null_conditions))\n",
+    "\n",
+    "    if remove_duplicates:\n",
+    "        deduplicate_clause = \"SELECT DISTINCT\"\n",
+    "    else:\n",
+    "        deduplicate_clause = \"SELECT\"\n",
+    "\n",
+    "    if sql_conditions:\n",
+    "        sql_condition = \"WHERE \" + \" AND \".join(sql_conditions)\n",
+    "    else:\n",
+    "        sql_condition = \"\"\n",
+    "\n",
+    "    sql = f\"{deduplicate_clause} * FROM ({sql_base}) AS subquery {sql_condition}\"\n",
+    "\n",
+    "    # Execute the query and save the results to a new table\n",
+    "    #new_table_id = f\"{table_id}_cleaned\"\n",
+    "    #new_table_ref = client.dataset(table_ref.dataset_id).table(new_table_id)\n",
+    "    \n",
+    "    new_table_id = f\"{project_id}.{table_ref.dataset_id}.{table_ref.table_id}_cleaned\"\n",
+    "    new_table_ref = client.dataset(table_ref.dataset_id).table(f\"{table_ref.table_id}_cleaned\")\n",
+    "\n",
+    "    job_config = bigquery.QueryJobConfig(destination=new_table_ref)\n",
+    "    query_job = client.query(sql, job_config=job_config)\n",
+    "    query_job.result()\n",
+    "\n",
+    "    print(f\"Cleaned table saved as {new_table_id}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned table saved as snappy-nomad-382716.staging.demographic_cleaned.\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_bigquery_table(\"snappy-nomad-382716\",'snappy-nomad-382716.staging.demographic', remove_duplicates=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned table saved as snappy-nomad-382716.staging.referal_cleaned.\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_bigquery_table(\"snappy-nomad-382716\",'snappy-nomad-382716.staging.referal', remove_duplicates=True)"
    ]
   },
   {
