--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from google.cloud import bigquery\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from google.cloud import storage"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +72,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def load_csv_to_bigquery_autodetect(csv_path, project_id, table_name):\n",
+    "    dataset_name = 'staging'\n",
+    "    # Create a BigQuery client \n",
+    "    bq_client = bigquery.Client(project=project_id)\n",
+    "\n",
+    "    # Create the BigQuery dataset if it doesn't exist\n",
+    "    dataset_ref = bq_client.dataset(dataset_name)\n",
+    "    try:\n",
+    "        bq_client.get_dataset(dataset_ref)\n",
+    "        print(\"Dataset {} already exists\".format(dataset_name))\n",
+    "    except:\n",
+    "        print(\"Creating dataset {}\".format(dataset_name))\n",
+    "        dataset = bigquery.Dataset(dataset_ref)\n",
+    "        bq_client.create_dataset(dataset)\n",
+    "\n",
+    "    # Set the destination table for the data\n",
+    "    table_ref = dataset_ref.table(table_name)\n",
+    "\n",
+    "    # Create the table in BigQuery with schema autodetection\n",
+    "    job_config = bigquery.LoadJobConfig()\n",
+    "    job_config.source_format = bigquery.SourceFormat.CSV\n",
+    "    job_config.skip_leading_rows = 1\n",
+    "    job_config.autodetect = True # Set to True to automatically detect schema\n",
+    "\n",
+    "    with open(csv_path, \"rb\") as source_file:\n",
+    "        job = bq_client.load_table_from_file(\n",
+    "            source_file,\n",
+    "            table_ref,\n",
+    "            job_config=job_config\n",
+    "        )\n",
+    "        job.result()  # Wait for the job to complete.\n",
+    "\n",
+    "    print(\"Data uploaded to BigQuery successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,31 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset staging already exists\n"
-     ]
-    },
-    {
-     "ename": "Conflict",
-     "evalue": "409 POST https://bigquery.googleapis.com/bigquery/v2/projects/snappy-nomad-382716/datasets/staging/tables?prettyPrint=false: Already Exists: Table snappy-nomad-382716:staging.superstore",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mConflict\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[86], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m load_csv_to_bigquery(\u001b[39m\"\u001b[39;49m\u001b[39mC:\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mUX501VW\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mDesktop\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mBigQuery-Data-Modeling\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mDastaset\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39msuperstore_dataset2011-2015.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msnappy-nomad-382716\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39msuperstore\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[26], line 31\u001b[0m, in \u001b[0;36mload_csv_to_bigquery\u001b[1;34m(csv_path, project_id, table_name)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[39m# Create the table in BigQuery\u001b[39;00m\n\u001b[0;32m     30\u001b[0m table \u001b[39m=\u001b[39m bigquery\u001b[39m.\u001b[39mTable(table_ref, schema\u001b[39m=\u001b[39mschema)\n\u001b[1;32m---> 31\u001b[0m table \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39;49mcreate_table(table)\n\u001b[0;32m     33\u001b[0m \u001b[39m# Load the data into the table\u001b[39;00m\n\u001b[0;32m     34\u001b[0m job_config \u001b[39m=\u001b[39m bigquery\u001b[39m.\u001b[39mLoadJobConfig()\n",
-      "File \u001b[1;32mc:\\Users\\UX501VW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\google\\cloud\\bigquery\\client.py:779\u001b[0m, in \u001b[0;36mClient.create_table\u001b[1;34m(self, table, exists_ok, retry, timeout)\u001b[0m\n\u001b[0;32m    777\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    778\u001b[0m     span_attributes \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mpath\u001b[39m\u001b[39m\"\u001b[39m: path, \u001b[39m\"\u001b[39m\u001b[39mdataset_id\u001b[39m\u001b[39m\"\u001b[39m: dataset_id}\n\u001b[1;32m--> 779\u001b[0m     api_response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_api(\n\u001b[0;32m    780\u001b[0m         retry,\n\u001b[0;32m    781\u001b[0m         span_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mBigQuery.createTable\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    782\u001b[0m         span_attributes\u001b[39m=\u001b[39;49mspan_attributes,\n\u001b[0;32m    783\u001b[0m         method\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mPOST\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    784\u001b[0m         path\u001b[39m=\u001b[39;49mpath,\n\u001b[0;32m    785\u001b[0m         data\u001b[39m=\u001b[39;49mdata,\n\u001b[0;32m    786\u001b[0m         timeout\u001b[39m=\u001b[39;49mtimeout,\n\u001b[0;32m    787\u001b[0m     )\n\u001b[0;32m    788\u001b[0m     \u001b[39mreturn\u001b[39;00m Table\u001b[39m.\u001b[39mfrom_api_repr(api_response)\n\u001b[0;32m    789\u001b[0m \u001b[39mexcept\u001b[39;00m core_exceptions\u001b[39m.\u001b[39mConflict:\n",
-      "File \u001b[1;32mc:\\Users\\UX501VW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\google\\cloud\\bigquery\\client.py:813\u001b[0m, in \u001b[0;36mClient._call_api\u001b[1;34m(self, retry, span_name, span_attributes, job_ref, headers, **kwargs)\u001b[0m\n\u001b[0;32m    809\u001b[0m \u001b[39mif\u001b[39;00m span_name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    810\u001b[0m     \u001b[39mwith\u001b[39;00m create_span(\n\u001b[0;32m    811\u001b[0m         name\u001b[39m=\u001b[39mspan_name, attributes\u001b[39m=\u001b[39mspan_attributes, client\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m, job_ref\u001b[39m=\u001b[39mjob_ref\n\u001b[0;32m    812\u001b[0m     ):\n\u001b[1;32m--> 813\u001b[0m         \u001b[39mreturn\u001b[39;00m call()\n\u001b[0;32m    815\u001b[0m \u001b[39mreturn\u001b[39;00m call()\n",
-      "File \u001b[1;32mc:\\Users\\UX501VW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\google\\api_core\\retry.py:349\u001b[0m, in \u001b[0;36mRetry.__call__.<locals>.retry_wrapped_func\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    345\u001b[0m target \u001b[39m=\u001b[39m functools\u001b[39m.\u001b[39mpartial(func, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    346\u001b[0m sleep_generator \u001b[39m=\u001b[39m exponential_sleep_generator(\n\u001b[0;32m    347\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_initial, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_maximum, multiplier\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multiplier\n\u001b[0;32m    348\u001b[0m )\n\u001b[1;32m--> 349\u001b[0m \u001b[39mreturn\u001b[39;00m retry_target(\n\u001b[0;32m    350\u001b[0m     target,\n\u001b[0;32m    351\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_predicate,\n\u001b[0;32m    352\u001b[0m     sleep_generator,\n\u001b[0;32m    353\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_timeout,\n\u001b[0;32m    354\u001b[0m     on_error\u001b[39m=\u001b[39;49mon_error,\n\u001b[0;32m    355\u001b[0m )\n",
-      "File \u001b[1;32mc:\\Users\\UX501VW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\google\\api_core\\retry.py:191\u001b[0m, in \u001b[0;36mretry_target\u001b[1;34m(target, predicate, sleep_generator, timeout, on_error, **kwargs)\u001b[0m\n\u001b[0;32m    189\u001b[0m \u001b[39mfor\u001b[39;00m sleep \u001b[39min\u001b[39;00m sleep_generator:\n\u001b[0;32m    190\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 191\u001b[0m         \u001b[39mreturn\u001b[39;00m target()\n\u001b[0;32m    193\u001b[0m     \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m    194\u001b[0m     \u001b[39m# This function explicitly must deal with broad exceptions.\u001b[39;00m\n\u001b[0;32m    195\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m exc:\n",
-      "File \u001b[1;32mc:\\Users\\UX501VW\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\google\\cloud\\_http\\__init__.py:494\u001b[0m, in \u001b[0;36mJSONConnection.api_request\u001b[1;34m(self, method, path, query_params, data, content_type, headers, api_base_url, api_version, expect_json, _target_object, timeout, extra_api_info)\u001b[0m\n\u001b[0;32m    482\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_make_request(\n\u001b[0;32m    483\u001b[0m     method\u001b[39m=\u001b[39mmethod,\n\u001b[0;32m    484\u001b[0m     url\u001b[39m=\u001b[39murl,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m     extra_api_info\u001b[39m=\u001b[39mextra_api_info,\n\u001b[0;32m    491\u001b[0m )\n\u001b[0;32m    493\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m response\u001b[39m.\u001b[39mstatus_code \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[1;32m--> 494\u001b[0m     \u001b[39mraise\u001b[39;00m exceptions\u001b[39m.\u001b[39mfrom_http_response(response)\n\u001b[0;32m    496\u001b[0m \u001b[39mif\u001b[39;00m expect_json \u001b[39mand\u001b[39;00m response\u001b[39m.\u001b[39mcontent:\n\u001b[0;32m    497\u001b[0m     \u001b[39mreturn\u001b[39;00m response\u001b[39m.\u001b[39mjson()\n",
-      "\u001b[1;31mConflict\u001b[0m: 409 POST https://bigquery.googleapis.com/bigquery/v2/projects/snappy-nomad-382716/datasets/staging/tables?prettyPrint=false: Already Exists: Table snappy-nomad-382716:staging.superstore"
+      "Dataset staging already exists\n",
+      "Data uploaded to BigQuery successfully.\n"
      ]
     }
    ],
@@ -172,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
