Schema Function fixed

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from google.cloud import bigquery\n",
     "import pandas as pd\n",
-    "from google.cloud import storage"
+    "import json"
    ]
   },
   {
@@ -216,69 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fact_table_name = \"sales_fact\"\n",
-    "fact_table_columns = [\n",
-    "    bigquery.SchemaField(\"order_id\", \"STRING\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"product_id\", \"STRING\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"customer_id\", \"STRING\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"order_date\", \"DATE\", mode=\"REQUIRED\"),\n",
-    "    bigquery.SchemaField(\"sales\", \"FLOAT\", mode=\"NULLABLE\"),\n",
-    "    bigquery.SchemaField(\"quantity\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "    bigquery.SchemaField(\"discount\", \"FLOAT\", mode=\"NULLABLE\"),\n",
-    "    bigquery.SchemaField(\"profit\", \"FLOAT\", mode=\"NULLABLE\"),\n",
-    "]\n",
-    "\n",
-    "dimension_tables = {\n",
-    "    \"date_dim\": [\n",
-    "        bigquery.SchemaField(\"order_date\", \"DATE\", mode=\"REQUIRED\"),\n",
-    "        bigquery.SchemaField(\"ship_date\", \"DATE\", mode=\"REQUIRED\"),\n",
-    "        #bigquery.SchemaField(\"day\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "        #bigquery.SchemaField(\"month\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "        #bigquery.SchemaField(\"year\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "        #bigquery.SchemaField(\"quarter\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "    ],\n",
-    "    \"customer_dim\": [\n",
-    "        bigquery.SchemaField(\"customer_id\", \"STRING\", mode=\"REQUIRED\"),\n",
-    "        bigquery.SchemaField(\"customer_name\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"segment\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"country\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"city\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"state\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"postal_code\", \"INTEGER\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"region\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "    ],\n",
-    "    \"product_dim\": [\n",
-    "        bigquery.SchemaField(\"product_id\", \"STRING\", mode=\"REQUIRED\"),\n",
-    "        bigquery.SchemaField(\"category\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"sub_category\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "        bigquery.SchemaField(\"product_name\", \"STRING\", mode=\"NULLABLE\"),\n",
-    "    ],\n",
-    "}\n",
-    "\n",
-    "fact_dimension_key_map = {\n",
-    "    \"order_id\": {\n",
-    "        \"order_date\": \"date_dim\",\n",
-    "        \"customer_id\": \"customer_dim\",\n",
-    "        \"product_id\": \"product_dim\",\n",
-    "    }\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import bigquery\n",
     "\n",
-    "def create_warehouse_schema(project_id, staging_table_id, fact_table_name, fact_table_columns, dimension_tables, fact_dimension_key_map):\n",
+    "def create_warehouse_schema_from_json(project_id, json_path):\n",
     "    # Initialize BigQuery client\n",
     "    client = bigquery.Client(project=project_id)\n",
+    "\n",
+    "    # Load the schema information from the JSON file\n",
+    "    with open(json_path, 'r') as f:\n",
+    "        schema_info = json.load(f)\n",
     "\n",
     "    # Create a dataset named \"warehouse\" (if it doesn't already exist)\n",
     "    dataset_id = \"warehouse\"\n",
@@ -291,34 +240,32 @@
     "        dataset = client.create_dataset(dataset)\n",
     "\n",
     "    # Define fact table schema\n",
-    "    fact_schema = [bigquery.SchemaField(field.name, field.field_type, mode=field.mode) for field in fact_table_columns]\n",
-    "\n",
-    "    # Create fact table\n",
+    "    fact_table_name = schema_info['fact_table_name']\n",
+    "    fact_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE')) for field in schema_info['fact_table_columns']]\n",
     "    fact_table_ref = client.dataset(dataset_id).table(fact_table_name)\n",
-    "    fact_table = bigquery.Table(fact_table_ref, schema=fact_schema)\n",
-    "    fact_table.time_partitioning = bigquery.TimePartitioning(\n",
-    "        type_=bigquery.TimePartitioningType.DAY,\n",
-    "        field=\"order_date\",\n",
-    "    )\n",
+    "    fact_table = bigquery.Table(fact_table_ref, schema=fact_table_columns)\n",
     "    fact_table = client.create_table(fact_table)  # API request\n",
     "\n",
     "    # Create dimension tables\n",
-    "    for dimension_table_name, dimension_table_columns in dimension_tables.items():\n",
-    "        dimension_schema = [bigquery.SchemaField(field.name, field.field_type, mode=field.mode) for field in dimension_table_columns]\n",
+    "    for dimension_table_name, dimension_table_info in schema_info['dimension_tables'].items():\n",
+    "        dimension_table_columns = [bigquery.SchemaField(field['name'], field['type'], mode=field.get('mode', 'NULLABLE')) for field in dimension_table_info]\n",
     "        dimension_table_ref = client.dataset(dataset_id).table(dimension_table_name)\n",
-    "        dimension_table = bigquery.Table(dimension_table_ref, schema=dimension_schema)\n",
+    "        dimension_table = bigquery.Table(dimension_table_ref, schema=dimension_table_columns)\n",
     "        dimension_table = client.create_table(dimension_table)  # API request\n",
     "\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_warehouse_dataset(\"snappy-nomad-382716\", \"snappy-nomad-382716.staging.superstore_cleaned\", fact_table_name, fact_table_columns, dimension_tables, fact_dimension_key_map)"
+    "    # Create fact-dimension mapping tables\n",
+    "    for fact_column, dimension_map in schema_info['fact_dimension_key_map'].items():\n",
+    "        for dimension_column, dimension_table_name in dimension_map.items():\n",
+    "            mapping_table_name = f\"{fact_table_name}_{dimension_table_name}_{dimension_column}\"\n",
+    "            mapping_table_columns = [\n",
+    "                bigquery.SchemaField(fact_column, 'STRING', mode='REQUIRED'),\n",
+    "                bigquery.SchemaField(dimension_column, 'STRING', mode='REQUIRED'),\n",
+    "            ]\n",
+    "            mapping_table_ref = client.dataset(dataset_id).table(mapping_table_name)\n",
+    "            mapping_table = bigquery.Table(mapping_table_ref, schema=mapping_table_columns)\n",
+    "            mapping_table = client.create_table(mapping_table)  # API request\n",
+    "\n",
+    "    print(\"Warehouse schema created successfully.\")\n"
    ]
   },
   {
@@ -327,7 +274,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.cloud import bigquery\n",
     "\n",
     "def load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names):\n",
     "    # Initialize BigQuery client\n",
@@ -358,28 +304,25 @@
     "        query_job = client.query(sql, job_config=job_config)\n",
     "        query_job.result()\n",
     "\n",
-    "        print(f\"Data copied from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n",
-    "\n",
-    "# Example usage:\n",
-    "# project_id = \"snappy-nomad-382716\"  # Replace with your actual project ID\n",
-    "# dataset_warehouse = \"warehouse\"\n",
-    "# dataset_staging = \"staging\"\n",
-    "# staging_table_id = \"staging_table\"\n",
-    "# warehouse_table_names = [\"warehouse_table1\", \"warehouse_table2\", \"warehouse_table3\", \"warehouse_table4\"]\n",
-    "\n",
-    "# load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)\n"
+    "        print(f\"Data copied from {dataset_staging}.{staging_table_id} to {dataset_warehouse}.{warehouse_table_name}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.sales_fact\n"
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.date_dim\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.customer_dim\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.product_dim\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.sales_fact\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.sales_fact_customer_dim_customer_id\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.sales_fact_date_dim_order_date\n",
+      "Data copied from staging.snappy-nomad-382716.staging.superstore_cleaned to warehouse.sales_fact_product_dim_product_id\n"
      ]
     }
    ],
@@ -389,10 +332,27 @@
     "dataset_warehouse = \"warehouse\"\n",
     "dataset_staging = \"staging\"\n",
     "staging_table_id = \"snappy-nomad-382716.staging.superstore_cleaned\"\n",
-    "warehouse_table_names = [\"sales_fact\"]\n",
+    "warehouse_table_names = [\"date_dim\", \"customer_dim\", \"product_dim\", \"sales_fact\",\"sales_fact_customer_dim_customer_id\", \"sales_fact_date_dim_order_date\", \"sales_fact_product_dim_product_id\"]\n",
     "#[\"date_dim\", \"customer_dim\", \"product_dim\", \"order_fact\"]\n",
     "\n",
     "load_data_from_staging_to_warehouse(project_id, dataset_warehouse, dataset_staging, staging_table_id, warehouse_table_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warehouse schema created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_warehouse_schema_from_json(\"snappy-nomad-382716\", \"C:\\\\Users\\\\UX501VW\\\\Desktop\\\\BigQuery-Data-Modeling\\\\schema.json\")"
    ]
   },
   {
